cargo-features = ["default-run"]

[package]
name = "rate"
version = "0.1.0"
authors = ["Johannes Altmanninger <aclopte@gmail.com>"]
description = "DRAT proof checker for DIMACS formulas"
edition = "2018"
license = "MIT"
build = "build.rs"

default-run = "rate"

[[bin]]
name = "sickcheck"
path = "src/sickcheck.rs"

[dependencies]
rate-macros = { path = "rate-macros" }
ansi_term = "0.11"
derive_more = "0.13"
clap = "2.32"
scopeguard = "0.3"
flame = { version = "0.2", optional = true }
flamer = { version = "0.3", optional = true }
atty = "0.2"
static_assertions = "0.3"
bitfield = "0.13"
memmap = "0.7"
toml = "0.4"
# serde = { version = "1.0", features = ["derive"] }
serde = "1.0"
serde_derive = "1.0"

[features]
default = []
flame_it = ["flame", "flamer"]
clause_lifetime_heuristic = []

[profile.release]
panic = "abort"
