[package]
name = "rate"
version = "0.1.0"
authors = ["Johannes Altmanninger <aclopte@gmail.com>"]
description = "DRAT proof checker for DIMACS formulas"
edition = "2018"
license = "MIT"
build = "build.rs"

[[bin]]
name = "sick-check"
path = "src/sick-check.rs"

# [[bin]]
# name = "split-proof"
# path = "src/split-proof.rs"

[dependencies]
rate-macros = { path = "rate-macros" }
ansi_term = "0.11"
derive_more = "0.13"
clap = "2.32"
scopeguard = "0.3"
atty = "0.2"
static_assertions = "0.3"
bitfield = "0.13"
memmap = "0.7"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
zstd = "0.4"
flate2 = "1.0"
bzip2 = "0.3"
lz4 = "1.23"
xz2 = "0.1"
libc = "0.2"

[features]
default = []
clause_lifetime_heuristic = []

[profile.release]
panic = "abort"
