[package]
name = "rate-common"
version = "0.2.2"
authors = ["Johannes Altmanninger <aclopte@gmail.com>"]
edition = "2018"
description = "Internal modules for rate"
repository = "https://github.com/krobelus/rate"
license = "MIT"
readme = "README.md"

[dependencies]
rate-macros = { path = "../rate-macros", version = "0.2.2" }
atty = "0.2"
bzip2 = "0.3"
derive_more = "0.15"
flate2 = "1.0"
libc = "0.2"
lz4 = "1.23"
scopeguard = "1.0"
serde = "1.0"
serde_derive = "1.0"
static_assertions = "1.0"
toml = "0.5"
xz2 = "0.1"
zstd = "0.4"
