[package]
name = "rate-macros"
version = "0.1.0"
authors = ["Johannes Altmanninger <aclopte@gmail.com>"]
edition = "2018"
description = "Internal macros for rate"
repository = "https://github.com/krobelus/rate"
license = "MIT"
readme = "README.md"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
