[package]
name = "rate"
version = "0.3.0"
authors = ["Johannes Altmanninger <aclopte@gmail.com>"]
edition = "2018"
description = "Clausal proof checker (DRAT, DPR) for certifying SAT solvers' unsatisfiability results"
repository = "https://github.com/krobelus/rate"
license = "MIT"
readme = "README.md"

[[bin]]
name = "rate"
path = "rate.rs"

[dependencies]
rate-common = { path = "../rate-common", version = "0.3.0" }
rate-macros = { path = "../rate-macros", version = "0.3.0" }
clap = "2.33"
